Assert deterministic ordering within AST positions